Work on smoke tests
